# Numerical-Integration

./: CMakeLists.txt  README.md  argparse.h  aux.h  functions.c  functions.h  main.c  main.h  rng.c  rng.h
